kotlin/semlang-parser/src/test/semlang/validatorTests/fail/threadedTypes4.sem
// Incorrectly marks Integer as threaded
function increment(value: ~Integer): ~Integer {
  Integer.plus(value, Integer."1")
}
